Enable ruff SIM rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -73,6 +73,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "RSE",
     "RET",
     "SLF",
+    "SIM",
 ]
 ignore = [
     "E501", # line too long, handled by black
