Enable ruff TID rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -74,6 +74,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "RET",
     "SLF",
     "SIM",
+    "TID",
 ]
 ignore = [
     "E501", # line too long, handled by black
