Enable ruff TCH rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -75,6 +75,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "SLF",
     "SIM",
     "TID",
+    "TCH",
 ]
 ignore = [
     "E501", # line too long, handled by black
