Enable ruff INT rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -76,6 +76,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "SIM",
     "TID",
     "TCH",
+    "INT",
 ]
 ignore = [
     "E501", # line too long, handled by black
