--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -77,6 +77,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "TID",
     "TCH",
     "INT",
+#    "PTH",  # TODO: Consider enabling this
 ]
 ignore = [
     "E501", # line too long, handled by black
