Add commented ruff PL rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -78,6 +78,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "TCH",
     "INT",
 #    "PTH",  # TODO: Consider enabling this
+#    "PL",  # TODO: Consider enabling this
 ]
 ignore = [
     "E501", # line too long, handled by black
