Enable ruff RUF rule

--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -83,6 +83,7 @@ select = [  # https://docs.astral.sh/ruff/rules/
     "FLY",
     "PERF",
     "FURB",
+    "RUF",
 ]
 ignore = [
     "E501", # line too long, handled by black
