--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -920,7 +920,8 @@ operation_tests:
   parallel:
     matrix:
       - OPERATION: [ account_update_tests,
-      		     cancel_transfer_from_savings,
+                     account_witness_vote,
+                     cancel_transfer_from_savings,
                      limit_order_tests,
                      test_recurrent_transfer,
                      test_transfer_to_vesting_operation,
