Move old nodejs tests to the browser environment

--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,7 @@ r_advanced_benchmark.json
 *.norm
 results.json
 results.xml
+programs/beekeeper/beekeeper_wasm/LICENSE.md
 
 # pyrest tests
 *.out.json
