--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -38,7 +38,7 @@ include:
   - local: '/scripts/ci-helpers/prepare_data_image_job.yml'
   - local: '/scripts/ci-helpers/mirrornet_jobs.gitlab-ci.yml'
   - project: 'hive/common-ci-configuration'
-    ref: dd5a7fb401b572c8d64ab700980ba943d33506ef
+    ref: 5c42c8019dd329000fd036668b22eb3eb99a743a
     file:
     - '/templates/wasm_build.gitlab-ci.yml'
     - '/templates/python_projects.gitlab-ci.yml'
@@ -350,6 +350,9 @@ pre_commit_checks:
   extends:
     - .pre_commit_checks_template
     - .python_static_analysis_configuration
+  artifacts:
+    paths:
+      - tests/python/hive-local-tools/poetry.lock
 
 lint_code_with_ruff:
   stage: static_code_analysis
@@ -652,7 +655,6 @@ patterns_tests:
     - "$CI_PROJECT_DIR/tests/python/hive-local-tools/tests-api/hived/workdir_*"
     - docker_entrypoint.log
     when: always
-    expire_in: 6 hours
   tags:
     - data-cache-storage
 
@@ -714,7 +716,6 @@ python_pattern_mainnet_tests:
     - "**/generated_by_package_fixtures"
     - docker_entrypoint.log
     when: always
-    expire_in: 6 hours
   tags:
     - data-cache-storage
 
@@ -876,6 +877,9 @@ several_node_restarts_tests:
     - test -n "$HIVED_IMAGE_NAME"
     - ./tests/integration/test_several_node_restarts.sh $CI_PROJECT_DIR/data_generated_during_hive_replay 1000000 1500000
   artifacts:
+    reports:
+      dotenv:
+        - docker_image_name.env
     paths:
       - $CI_PROJECT_DIR/data_generated_during_hive_replay/datadir/docker_entrypoint.log
   tags:
