Enable account_witness_proxy_operation tests on CI

--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -987,6 +987,7 @@ operation_tests:
   parallel:
     matrix:
       - OPERATION: [ account_update_tests,
+                     account_witness_proxy_tests,
                      account_witness_vote_tests,
                      cancel_transfer_from_savings,
                      comment_tests,
