--- a/programs/beekeeper/beekeeper_wasm/tsconfig.json
+++ b/programs/beekeeper/beekeeper_wasm/tsconfig.json
@@ -25,8 +25,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
 
-    "rootDir": ".",
-    "baseUrl": ".",
+    "rootDir": "src",
 
     "outDir": "./dist",
 
@@ -53,6 +52,6 @@
     "verbose": true
   },
   "include": [
-    "./**/*.ts"
+    "src/**/*.ts"
   ]
 }
