Split message format mainnet 5m tests to each CI jobs

--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -759,9 +759,22 @@ python_pattern_mainnet_tests:
     JUNIT_REPORT: $CI_PROJECT_DIR/tests/python/api_tests/message_format_tests/report.xml
 
   script:
-    - cd tests/python/api_tests/message_format_tests
+    - cd tests/python/api_tests/message_format_tests/$API
     - export PYTEST_ARGS=(-m ${NODE_TYPE} --http-endpoint=${NODE_ADDRESS})
     - *run-pytest
+  parallel:
+    matrix:
+      - API: [ account_by_key_api_tests,
+               account_history_api,
+               block_api_tests,
+               condenser_api_tests,
+               database_api_tests,
+               json_rpc_api_tests,
+               market_history_api_tests,
+               rc_api_tests,
+               reputation_api_tests,
+               transaction_status_api_tests,
+               wallet_bridge_api_tests ]
   tags:
     - public-runner-docker
     - hived-for-tests
@@ -774,6 +787,7 @@ message_format_mainnet_5m_tests:
   services:
     - *hived-service
   variables:
+    PYTEST_TIMEOUT_MINUTES: 10
     NODE_ADDRESS: "hived-instance:8091"
     NODE_TYPE: "mainnet_5m"
     HIVED_UID: $HIVED_UID
