Add public README file

--- a/programs/beekeeper/beekeeper_wasm/package.json
+++ b/programs/beekeeper/beekeeper_wasm/package.json
@@ -15,6 +15,7 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "files": [
     "LICENSE.md",
+    "README.md",
     "build/beekeeper_wasm.js",
     "build/beekeeper_wasm.d.ts",
     "dist/*.d.ts",
