Made all submodules shallow

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,28 @@
 [submodule "secp256k1-zkp"]
 	path = libraries/fc/vendor/secp256k1-zkp
 	url = https://github.com/ElementsProject/secp256k1-zkp.git
+	shallow = true
 [submodule "tests_api"]
 	path = tests/python/hive-local-tools/tests_api
 	url = ../tests_api.git
+	shallow = true
 [submodule "test_tools"]
 	path = tests/python/hive-local-tools/test-tools
 	url = ../test-tools.git
+	shallow = true
 [submodule "websocketpp"]
 	path = libraries/fc/vendor/websocketpp
 	url = https://github.com/zaphoyd/websocketpp.git
+	shallow = true
 [submodule "libraries/vendor/zstd"]
 	path = libraries/vendor/zstd
 	url = https://github.com/facebook/zstd.git
+	shallow = true
 [submodule "libraries/chain/compression_dictionaries"]
 	path = libraries/chain/compression_dictionaries
 	url = ../compression_dictionaries.git
+	shallow = true
 [submodule "libraries/vendor/rocksdb"]
 	path = libraries/vendor/rocksdb
 	url = https://github.com/facebook/rocksdb.git
+	shallow = true
