Reverted change breaking shared objects/module targets depending on hive-protocol/fc libraries.

--- a/libraries/fc/CMakeLists.txt
+++ b/libraries/fc/CMakeLists.txt
@@ -496,8 +496,8 @@ ADD_LIBRARY ( STATIC_OPENSSL INTERFACE )
 ADD_TARGET_OPENSSL_LIBRARIES (STATIC_OPENSSL TRUE)
 
 add_library ( fc STATIC )
-target_link_libraries ( fc_core PUBLIC STATIC_BOOST STATIC_OPENSSL )
-target_link_libraries ( fc PUBLIC fc_core )
+target_link_libraries ( fc PUBLIC fc_core STATIC_BOOST STATIC_OPENSSL )
+
 if(NOT HIVE_BUILD_ON_MINIMAL_FC)
   ADD_TARGET_PACKAGE_LIBRARIES( fc ZLIB TRUE )
   ADD_TARGET_PACKAGE_LIBRARIES( fc BZip2 TRUE )
