Add explicit definition of Playwright project test suite

--- a/programs/beekeeper/beekeeper_wasm/package.json
+++ b/programs/beekeeper/beekeeper_wasm/package.json
@@ -9,7 +9,7 @@
     "postinstall": "playwright install",
     "prebuild": "cd ../../.. && husky install programs/beekeeper/beekeeper_wasm/.husky",
     "build": "tsc",
-    "test": "unset CI && playwright test --workers 1 --max-failures 1 __tests__",
+    "test": "unset CI && playwright test --workers 1 --max-failures 1 --project=beekeeper_testsuite",
     "prepack": "cp ../../../LICENSE.md ./LICENSE.md"
   },
   "license": "SEE LICENSE IN LICENSE.md",
