Related to issue https://gitlab.syncad.com/hive/wax/-/issues/9 - playwright should be only installed before running tests to avoid this dependency during regular installation of BK npm package.

--- a/programs/beekeeper/beekeeper_wasm/package.json
+++ b/programs/beekeeper/beekeeper_wasm/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "private": false,
   "scripts": {
-    "postinstall": "playwright install",
     "prebuild": "cd ../../.. && husky install programs/beekeeper/beekeeper_wasm/.husky",
     "build": "tsc",
+    "pretest": "playwright install",
     "test": "unset CI && playwright test --workers 1 --max-failures 1 --project=beekeeper_testsuite",
     "prepack": "cp ../../../LICENSE.md ./LICENSE.md"
   },
