--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -56,6 +56,7 @@ add_library( hive_chain
              block_compression_dictionaries.cpp
              block_log_reader.cpp
              fork_db_block_reader.cpp
+             pruned_block_reader.cpp
              irreversible_block_writer.cpp
              sync_block_writer.cpp
 
