--- a/tests/python/hive-local-tools/pyproject.toml
+++ b/tests/python/hive-local-tools/pyproject.toml
@@ -33,7 +33,7 @@ types-PyYAML = "6.0.12.11"
 shared-tools = { path = "shared-tools", develop = true }
 test-tools = { path = "test-tools", develop = true }
 tests_api = { path = "tests_api", develop = true }
-wax = "0.0.1a4+277cf4f"
+wax = "0.0.3a2.dev6+e94200f"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "3.4.0"
