Explicitly set container image for github workflow.

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -20,6 +20,7 @@ jobs:
         language: [ 'cpp' ]
 
     runs-on: ${{ matrix.os }}
+    container: ubuntu:22.04
     
     steps:
     - name: Checkout repository
