Use self-hosted and ubuntu-22.04 labels for GitHub workflow.

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -19,7 +19,7 @@ jobs:
         os: ['ubuntu-22.04']
         language: [ 'cpp' ]
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ['self-hosted','ubuntu-22.04']
     container: ubuntu:22.04
     
     steps:
