--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -19,7 +19,7 @@ jobs:
         os: ['ubuntu-22.04']
         language: [ 'cpp' ]
 
-    runs-on: ['self-hosted','ubuntu-22.04']
+    runs-on: self-hosted
     container: ubuntu:22.04
     
     steps:
