--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -992,6 +992,7 @@ operation_tests:
                      cancel_transfer_from_savings,
                      comment_tests,
                      limit_order_tests,
+                     proposal_tests,
                      test_recurrent_transfer,
                      test_transfer_to_vesting_operation,
                      test_withdraw_vesting_operation,
