--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -19,9 +19,8 @@ jobs:
         os: ['ubuntu-22.04']
         language: [ 'cpp' ]
 
-    runs-on: self-hosted
-    container: ubuntu:22.04
-    
+    runs-on: ${{ matrix.os }}
+        
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
@@ -31,12 +30,11 @@ jobs:
       with:
         languages: ${{ matrix.language }}
 
-    - name: Build Hive
+    - name: Configure for (but not) build Hive
       run: |
         git submodule update --init --recursive
         sudo apt install -y doxygen libboost-all-dev libreadline-dev libssl-dev libtool ncurses-dev pkg-config python3 python3-dev python3-jinja2 python3-pip libsnappy-dev libbz2-dev liburing-dev
         cmake -DCMAKE_BUILD_TYPE=Release .
-        make
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
