--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -5,8 +5,8 @@ on:
     branches: [ master, develop, g-maintenance ]
 
 jobs:
-  analyze:
-    name: Analyze
+  codeql-analysis:
+    name: CodeQL Analysis
     
     permissions:
       actions: read
@@ -24,17 +24,32 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        submodules: 'recursive'
 
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
-
-    - name: Configure for (but not) build Hive
-      run: |
-        git submodule update --init --recursive
-        sudo apt install -y doxygen libboost-all-dev libreadline-dev libssl-dev libtool ncurses-dev pkg-config python3 python3-dev python3-jinja2 python3-pip libsnappy-dev libbz2-dev liburing-dev
-        cmake -DCMAKE_BUILD_TYPE=Release .
-
+    
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
+
+  build:
+    name: Build on a self hosted runner
+    runs-on: self-hosted
+
+    steps:
+      - name: Checkout the code
+        run: |
+          git checkout https://github.com/openhive-network/hive
+          git submodule update --init --recursive
+
+      - name: Configure the build
+        run: |
+          sudo apt install -y doxygen libboost-all-dev libreadline-dev libssl-dev libtool ncurses-dev pkg-config python3 python3-dev python3-jinja2 python3-pip libsnappy-dev libbz2-dev liburing-dev
+          cmake -DCMAKE_BUILD_TYPE=Release .
+
+      - name: Build
+        run: |
+          make -j4
