--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -40,16 +40,28 @@ jobs:
     runs-on: self-hosted
 
     steps:
+      - name: Get runner info
+        run: |
+          hostname -A
+          id
+          pwd
+          free -m
+          nproc
+
       - name: Checkout the code
         run: |
           git checkout https://github.com/openhive-network/hive
+          cd hive
           git submodule update --init --recursive
+
+      - name: Get the prerequisites
+        run: |
+          sudo apt install -y doxygen libboost-all-dev libreadline-dev libssl-dev libtool ncurses-dev pkg-config python3 python3-dev python3-jinja2 python3-pip libsnappy-dev libbz2-dev liburing-dev
 
       - name: Configure the build
         run: |
-          sudo apt install -y doxygen libboost-all-dev libreadline-dev libssl-dev libtool ncurses-dev pkg-config python3 python3-dev python3-jinja2 python3-pip libsnappy-dev libbz2-dev liburing-dev
           cmake -DCMAKE_BUILD_TYPE=Release .
 
       - name: Build
         run: |
-          make -j4
+          time make -j4
