--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -32,6 +32,14 @@ jobs:
       with:
         languages: ${{ matrix.language }}
     
+    - name: Configure build for analysis
+      run: |
+        sudo apt install -y doxygen libboost-all-dev libreadline-dev libssl-dev libtool ncurses-dev pkg-config python3 python3-dev python3-jinja2 python3-pip libsnappy-dev libbz2-dev liburing-dev
+        cmake -DCMAKE_BUILD_TYPE=Release .
+    - name: Run build for analysis
+      run: |
+        make hived cli_wallet
+    
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
 
@@ -50,7 +58,7 @@ jobs:
 
       - name: Checkout the code
         run: |
-          git checkout https://github.com/openhive-network/hive
+          git clone https://github.com/openhive-network/hive
           cd hive
           git submodule update --init --recursive
 
