--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -46,8 +46,6 @@ jobs:
   build:
     name: Build on a self hosted runner
     runs-on: self-hosted
-    env:
-      DEBIAN_FRONTEND: noninteractive
 
     steps:
       - name: Get runner info
@@ -66,7 +64,7 @@ jobs:
 
       - name: Get the prerequisites
         run: |
-          sudo apt install -y doxygen libboost-all-dev libreadline-dev libssl-dev libtool ncurses-dev pkg-config python3 python3-dev python3-jinja2 python3-pip libsnappy-dev libbz2-dev liburing-dev
+          sudo DEBIAN_FRONTEND=noninteractive apt install -y doxygen libboost-all-dev libreadline-dev libssl-dev libtool ncurses-dev pkg-config python3 python3-dev python3-jinja2 python3-pip libsnappy-dev libbz2-dev liburing-dev
 
       - name: Configure the build
         run: |
