--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -20,6 +20,7 @@ jobs:
         language: [ 'cpp' ]
 
     runs-on: ${{ matrix.os }}
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/develop'
         
     steps:
     - name: Checkout repository
@@ -64,7 +65,7 @@ jobs:
 
       - name: Get the prerequisites
         run: |
-          sudo DEBIAN_FRONTEND=noninteractive apt install -y doxygen libboost-all-dev libreadline-dev libssl-dev libtool ncurses-dev pkg-config python3 python3-dev python3-jinja2 python3-pip libsnappy-dev libbz2-dev liburing-dev
+          sudo DEBIAN_FRONTEND=noninteractive apt install -y doxygen libboost-all-dev libreadline-dev libssl-dev libtool ncurses-dev pkg-config python3 python3-dev python3-jinja2 python3-pip libsnappy-dev libbz2-dev liburing-dev cmake
 
       - name: Configure the build
         run: |
