--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -69,7 +69,7 @@ jobs:
 
       - name: Get the prerequisites
         run: |
-          sudo DEBIAN_FRONTEND=noninteractive apt install -y doxygen libboost-all-dev libreadline-dev libssl-dev libtool ncurses-dev pkg-config python3 python3-dev python3-jinja2 python3-pip libsnappy-dev libbz2-dev liburing-dev cmake
+          sudo DEBIAN_FRONTEND=noninteractive apt install -y build-essential clang clang-tidy cmake doxygen libboost-all-dev libbz2-dev libglib2.0-0 libglib2.0-data libncurses5-dev libreadline-dev libsnappy-dev libssl-dev libtool liburing-dev libxml2 make ncurses-dev ninja-build perl pkg-config python3 python3-dev python3-jinja2 wget xxd
 
       - name: Configure the build
         run: |
