Proper path for hived binary and no need for chmod.

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -77,5 +77,4 @@ jobs:
       - name: Results
         run: |
           ls -lad build/programs/hived/hived build/programs/cli_wallet/cli_wallet
-          chmod 755 build/programs/hived/hived build/programs/cli_wallet/cli_wallet
-          ./build/programs/hived --version
+          ./build/programs/hived/hived --version
